# aixcl

./: .ai-assistant-instructions.md  .cursorrules  .env.example  .env.podman  .git_commit.sh  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .goosehints  .pre-commit-config.yaml  .yamllint.yml  1  AGENTS.md  BASH_COMPLETION.md  CHANGELOG.md  CHANGELOG_LOKI.md  CLAUDE.md  COMMERCIAL.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CREATE_PR.md  DATASOURCE-CONNECTION-SUMMARY.md  DEPENDENCY_VERSION_AUDIT.md  DEVELOPMENT.md  DEVELOPMENT_WORKFLOW.md  ENGINE_TEST_PLAN.md  ENGINE_TEST_RESULTS.md  GITHUB_ISSUE.md  GIT_WORKFLOW_TEST.md  GPU-MONITORING.md  IMPLEMENTATION_SUMMARY.md  ISSUE-MONITORING-INTEGRATION.md  ISSUE.md  LOGGING.md  MONITORING.md  PR-TEST-PLAN.md  PR_DESCRIPTION.md  PULL_REQUEST.md  QUICKSTART.md  (+29 more)
llm-council/: .dockerignore  .gitignore  CLAUDE.md  COUNCIL_EVOLUTION.md  COUNCIL_PRINCIPLES.md  Dockerfile  EVALUATION_LEARNINGS.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  TESTING.md  main.py  pyproject.toml  start.sh  test_db_connection.py  test_db_in_container.sh
llm-council/backend/: __init__.py  config.py  config_manager.py  conversation_tracker.py  council.py  db.py  db_storage.py  main.py  ollama_adapter.py  openrouter.py  storage.py
llm-council/frontend/: package-lock.json  package.json
llm-council/scripts/: test_council_members.py  test_update_config.py  update_config.sh
llm-council/tests/: CHALLENGE_PROMPT_TEMPLATE.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  USAGE.md  analysis_challenge_01_retry.md  analysis_challenge_02_response.md  (+20 more)
(+629 files in other folders)
