[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.121.3",
    "uvicorn[standard]==0.38.0",
    "python-dotenv==1.2.1",
    "httpx==0.28.1",
    "pydantic==2.12.4",
    "asyncpg==0.29.0",
]
